Add args to expose libraries Java 17 hides. In NBM, doc, tests, install
Not yet done for mvn exec